# src/main/openapi/laelith-vtt.yaml
@@ -15,6 +15,8 @@ security:
 tags:
   - name: base
     description: Base API
+  - name: dice
+    description: Dice roll API
 paths:
   /info:
     get:
@@ -29,6 +31,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Info'
+  /dice/roll:
+    post:
+      summary: Roll dice
+      operationId: roll
+      tags:
+        - dice
+      requestBody:
+        description: Dice roll request
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DiceRollRequest'
+      responses:
+        200:
+          description: Dice roll result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DiceRollResults'
 components:
   securitySchemes:
     oAuth2AuthCode:
@@ -58,3 +80,35 @@ components:
           type: integer
           format: int64
           description: Server time
+    DiceRollRequest:
+      type: object
+      properties:
+        expression:
+          type: string
+          description: Expression to roll
+      required:
+        - expression
+    DiceRollResults:
+      type: object
+      description: Result of complex dice roll
+      properties:
+        expression:
+          type: string
+          description: Rolled expression
+        result:
+          type: integer
+          description: Result of the roll
+        rolls:
+          type: array
+          items:
+            $ref: '#/components/schemas/DiceRollResult'
+    DiceRollResult:
+      type: object
+      description: Result of one dice roll
+      properties:
+        expression:
+          type: string
+          description: Rolled expression
+        result:
+          type: integer
+          description: Result of the roll
